--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <head></head>
 <body>
-The website is currently under construction...
+<h1>The website is currently under construction...</h1>
 </body>
 </html>
