Modified index file

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!--
+
 ---
 layout: default
 ---
@@ -21,3 +23,12 @@ layout: default
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
 
 </div>
+
+-->
+
+<html lang="en">
+	<head></head>
+	<body>
+		<h1>Sorry, website is *still* under development!</h1>
+	</body>
+</html>
